--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -215,7 +215,6 @@ textarea {
   resize: none;
   margin-bottom: 0.5rem;
   padding: 0.25rem;
-  color: grey;
   font-size: 0.75rem;
 }
 
